--- a/explore.html
+++ b/explore.html
@@ -78,14 +78,45 @@
                     <img class="bookimg1" src="images/book3.jpg" alt="">
                 </div>
             </div>
-        </div>
-        <div>
-            <div>
-                <div>
-                    <img class="author1" src="images/book1.jpg" >
+            <div class="container">
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype1">ROMANCE</h1>
+                    </div>
+                    <img class="bookimg" src="images\book1.png" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype1">FANTASY</h1>
+                    </div>
+                    <img class="bookimg" src="images/book2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype1">MYSTERY</h1>
+                    </div>
+                    <img class="bookimg" src="images/book3.jpg" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype2">HORROR</h1>
+                    </div>
+                    <img class="bookimg1" src="images\book1.png" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype2">FICTION</h1>
+                    </div>
+                    <img class="bookimg1" src="images/book2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype2">MYSTERY</h1>
+                    </div>
+                    <img class="bookimg1" src="images/book3.jpg" alt="">
                 </div>
             </div>
-        </div> 
+        </div>
 
         <!-- ----------------------------         footer   ------------------------------------ -->
         <div class="footer">  <!--footer -->
