https://github.com/AnirudhDattu/web1.git

--- a/explore.html
+++ b/explore.html
@@ -80,9 +80,9 @@
             </div>
         </div>
         <div>
-            <div>
+            <div class="rectangle2">
                 <div>
-                    <img class="author1" src="images/book1.jpg" >
+                    <img class="author1" src="images/book1.png" >
                 </div>
             </div>
         </div> 
@@ -95,8 +95,8 @@
             <div class="Fcontainer">
                 <div class="Fcont1">
                     <h3>Get To Know Us</h3>
-                    <p>about us</p>
-                    <p>carrers</p>
+                    <p>About Us</p>
+                    <p>Careers</p>
                     <p>Our Story</p>
                     <p>FAQ's</p>
                 </div>
