--- a/explore.html
+++ b/explore.html
@@ -19,7 +19,7 @@
                     <ul>
                         <li><a href="index.html">HOME</a></li>   
                         <li><a href="explore.html">EXPLORE</a></li>
-                        <li><a href="#">CATEGORIES</a></li>
+                        <li><a href="caterogies.html">CATEGORIES</a></li>
                         <li><a href="#">COMBOS</a></li>
                         <li><a href="#">HELP</a></li>
                     </ul>
