--- a/caterogies.html
+++ b/caterogies.html
@@ -28,8 +28,11 @@
             </div>
         </div>
         <hr>
-        <div>
+        <div class="container">
             <img class="woodbgc" src="images\woodbgc.png">
+            <img class="slb" src="images\slab.png">
+            <img class="slb2" src="images\slab.png">
+            <img class="slb3" src="images\slab.png">
         </div>
 
 
