--- a/caterogies.html
+++ b/caterogies.html
@@ -30,6 +30,8 @@
         <hr>
         <div class="container">
             <img class="woodbgc" src="images\woodbgc.png">
+            <div class="text">Bestseller In Romance</div>
+            <!-- <img class="img1" src="images\slab.png"> -->
             <img class="slb" src="images\slab.png">
             <img class="slb2" src="images\slab.png">
             <img class="slb3" src="images\slab.png">
