--- a/caterogies.html
+++ b/caterogies.html
@@ -28,13 +28,16 @@
             </div>
         </div>
         <hr>
-        <div class="container">
-            <img class="woodbgc" src="images\woodbgc.png">
-            <div class="text">Bestseller In Romance</div>
-            <!-- <img class="img1" src="images\slab.png"> -->
-            <img class="slb" src="images\slab.png">
-            <img class="slb2" src="images\slab.png">
-            <img class="slb3" src="images\slab.png">
+        <div>
+            <div class="container">
+                <img class="woodbgc" src="images\woodbgc.png">
+                <img class="img1" src="images\exp1.png">
+                <div class="text">Bestseller In Romance</div>
+                <img class="slb" src="images\slab.png">
+                <img class="slb2" src="images\slab.png">
+                <img class="slb3" src="images\slab.png">
+            </div>
+            
         </div>
 
 
