--- a/explore.html
+++ b/explore.html
@@ -61,77 +61,63 @@
                 </div>
                 <div class="item">
                     <div class="rectangle1">
-                        <h1 class="booktype2">NON - FICTION</h1>
+                        <h1 class="booktype2">HORROR</h1>
                     </div>
-                    <img class="bookimg1" src="images\book4.jpg" alt="">
+                    <img class="bookimg1" src="images\book1.png" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype2">FICTION</h1>
+                    </div>
+                    <img class="bookimg1" src="images/book2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype2">MYSTERY</h1>
+                    </div>
+                    <img class="bookimg1" src="images/book3.jpg" alt="">
+                </div>
+            </div>
+            <div class="container">
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype1">ROMANCE</h1>
+                    </div>
+                    <img class="bookimg" src="images\book1.png" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype1">FANTASY</h1>
+                    </div>
+                    <img class="bookimg" src="images/book2.jpg" alt="">
+                </div>
+                <div class="item">
+                    <div class="rectangle1">
+                        <h1 class="booktype1">MYSTERY</h1>
+                    </div>
+                    <img class="bookimg" src="images/book3.jpg" alt="">
                 </div>
                 <div class="item">
                     <div class="rectangle1">
                         <h1 class="booktype2">HORROR</h1>
                     </div>
-                    <img class="bookimg1" src="images/book5.jpg" alt="">
+                    <img class="bookimg1" src="images\book1.png" alt="">
                 </div>
                 <div class="item">
                     <div class="rectangle1">
-                        <h1 class="booktype2">THRILLER & SUSPENSE</h1>
+                        <h1 class="booktype2">FICTION</h1>
                     </div>
-                    <img class="bookimg1" src="images/book6.jpg" alt="">
+                    <img class="bookimg1" src="images/book2.jpg" alt="">
                 </div>
                 <div class="item">
                     <div class="rectangle1">
-                        <h1 class="booktype1">SCIENCE</h1>
+                        <h1 class="booktype2">MYSTERY</h1>
                     </div>
-                    <img class="bookimg" src="all-images/Explore/Cosmos.jpg" alt="">
-                </div>
-                <div class="item">
-                    <div class="rectangle1">
-                        <h1 class="booktype1">BIOGRAPHY</h1>
-                    </div>
-                    <img class="bookimg" src="all-images/Explore/Napolean-A Life in 30 Events.jpg" alt="">
-                </div>
-                <div class="item">
-                    <div class="rectangle1">
-                        <h1 class="booktype1">MOTIVATIONAL</h1>
-                    </div>
-                    <img class="bookimg" src="all-images/Explore/Man's Search For Meaning.jpg" alt="">
-                </div>
-                <div class="item">
-                    <div class="rectangle1">
-                        <h1 class="booktype2">SPIRITUAL</h1>
-                    </div>
-                    <img class="bookimg1" src="all-images/Explore/Bhagvad Gita.jpeg" alt="">
-                </div>
-                <div class="item">
-                    <div class="rectangle1">
-                        <h1 class="booktype2">CHILDREN</h1>
-                    </div>
-                    <img class="bookimg1" src="all-images/Explore/The Little Mermaid.jpg" alt="">
-                </div>
-                <div class="item">
-                    <div class="rectangle1">
-                        <h1 class="booktype2">SERIES</h1>
-                    </div>
-                    <img class="bookimg1" src="all-images/Explore/Series.jpeg" alt="">
-                </div>
-            </div>
-            <div class="shpc1">
-                <div class="genr1">LITTLE EXPLORER'S</div>
-                <div class="genr2">
-                    <div class="title1">Discover the Joy of Children's Books</div>
-                    <button class="age1">0 - 2 years</button>
-                    <button class="age2">2 - 4 years</button>
-                    <button class="age3">4 - 7 years</button>
-                    <button class="age4">7 - 10 years</button>
-                    <button class="age5">10 - 12 years</button>
-                    <button class="age6">12+ years</button>
-                </div>
-                <div class="genr3">
-                    <img class="pic1" src="all-images\Explore\The Lucky Puppy.jpg" alt="">
-                    <img class="pic2" src="all-images\Explore\Mary Can!.jpeg" alt="">
-                    <img class="pic3" src="all-images\Explore\The Name Jar.jpg" alt="">
+                    <img class="bookimg1" src="images/book3.jpg" alt="">
                 </div>
             </div>
         </div>
+
         <!-- ----------------------------         footer   ------------------------------------ -->
         <div class="footer">  <!--footer -->
             <div class="button-above-footer">
@@ -140,8 +126,8 @@
             <div class="Fcontainer">
                 <div class="Fcont1">
                     <h3>Get To Know Us</h3>
-                    <p>About Us</p>
-                    <p>Careers</p>
+                    <p>about us</p>
+                    <p>carrers</p>
                     <p>Our Story</p>
                     <p>FAQ's</p>
                 </div>
