<changes to explore page - authors>

--- a/explore.html
+++ b/explore.html
@@ -123,15 +123,38 @@
                     <button class="age3">4 - 7 years</button>
                     <button class="age4">7 - 10 years</button>
                     <button class="age5">10 - 12 years</button>
-                    <button class="age6">12+ years</button>
+                    <button class="age6">12+ </button>
                 </div>
                 <div class="genr3">
-                    <img class="pic1" src="all-images\Explore\The Lucky Puppy.jpg" alt="">
-                    <img class="pic2" src="all-images\Explore\Mary Can!.jpeg" alt="">
-                    <img class="pic3" src="all-images\Explore\The Name Jar.jpg" alt="">
+                    <img class="pic1" src="all-images\Explore\explore-children.png" alt="">
+                </div>
+            </div>
+            <div class="shpc2">
+                <div class="author-pics">
+                   <img class="author1" src="all-images\Explore\JKRowling.png" alt="">
+                   <img class="author1" src="all-images\Explore\Stephen King.png" alt="">
+                   <img class="author1" src="all-images\Explore\Colleen Hoover.png" alt="">
+                   <img class="author1" src="all-images\Explore\George Orwell.png" alt="">
+                   <img class="author2" src="all-images\Explore\Sudha Murthy.png" alt="">
+                   <img class="author2" src="all-images\Explore\Ana Huang.png" alt="">
+                   <img class="author2" src="all-images\Explore\Ali Hazelwood.png" alt="">
+                   <img class="author2" src="all-images\Explore\Emily Henry.png" alt="">
+                </div>
+                <div class="author">
+                    <p class="showcase">Author's Showcase</p>
                 </div>
             </div>
         </div>
+
+
+
+
+
+
+
+
+
+
         <!-- ----------------------------         footer   ------------------------------------ -->
         <div class="footer">  <!--footer -->
             <div class="button-above-footer">
