--- a/caterogies.html
+++ b/caterogies.html
@@ -20,7 +20,7 @@
                         <li><a href="index.html">HOME</a></li>   
                         <li><a href="explore.html">EXPLORE</a></li>
                         <li><a href="caterogies.html">CATEGORIES</a></li>
-                        <li><a href="#">COMBOS</a></li>
+                        <li><a href="#">CART</a></li>
                         <li><a href="#">HELP</a></li>
                     </ul>
                 </nav>
