--- a/explore.html
+++ b/explore.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="item">
                     <div class="rectangle1">
-                        <h1 class="booktype2">NON - FICTION</h1>
+                        <h1 class="booktype2">CHRONICAL</h1>
                     </div>
                     <img class="bookimg1" src="images\book4.jpg" alt="">
                 </div>
@@ -73,7 +73,7 @@
                 </div>
                 <div class="item">
                     <div class="rectangle1">
-                        <h1 class="booktype2">THRILLER & SUSPENSE</h1>
+                        <h1 class="booktype2">THRILLER</h1>
                     </div>
                     <img class="bookimg1" src="images/book6.jpg" alt="">
                 </div>
