<changes to explore page>

--- a/caterogies.html
+++ b/caterogies.html
@@ -33,6 +33,7 @@
                 <img class="woodbgc" src="images\woodbgc.png">
                 <img class="img1" src="images\exp1.png">
                 <div class="text">Bestseller In Romance</div>
+                <img class="img2" src="all-images\Catalog\The Spanish Love Deception.jpg">
                 <img class="slb" src="images\slab.png">
                 <img class="slb2" src="images\slab.png">
                 <img class="slb3" src="images\slab.png">
