--- a/explore.html
+++ b/explore.html
@@ -129,17 +129,17 @@
                     <img class="pic1" src="all-images\Explore\explore-children.png" alt="">
                 </div>
             </div>
-            <div class="shpc2">
-                <div class="author-pics">
+            <div class="container1">
+              
                    <img class="author1" src="all-images\Explore\JKRowling.png" alt="">
                    <img class="author1" src="all-images\Explore\Stephen King.png" alt="">
                    <img class="author1" src="all-images\Explore\Colleen Hoover.png" alt="">
                    <img class="author1" src="all-images\Explore\George Orwell.png" alt="">
-                   <img class="author2" src="all-images\Explore\Sudha Murthy.png" alt="">
-                   <img class="author2" src="all-images\Explore\Ana Huang.png" alt="">
-                   <img class="author2" src="all-images\Explore\Ali Hazelwood.png" alt="">
-                   <img class="author2" src="all-images\Explore\Emily Henry.png" alt="">
-                </div>
+                   <img class="author1" src="all-images\Explore\Sudha Murthy.png" alt="">
+                   <img class="author1" src="all-images\Explore\Ana Huang.png" alt="">
+                   <img class="author1" src="all-images\Explore\Ali Hazelwood.png" alt="">
+                   <img class="author1" src="all-images\Explore\Emily Henry.png" alt="">
+               
                 <div class="author">
                     <p class="showcase">Author's Showcase</p>
                 </div>
