explore page complete

--- a/explore.html
+++ b/explore.html
@@ -142,6 +142,7 @@
                
                 <div class="author">
                     <p class="showcase">Author's Showcase</p>
+                    <p class="showcase2">- Dive into the world of your favorite authors -</p>
                 </div>
             </div>
         </div>
