--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <div class="navbar">
                 <nav>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>   
+                    <li><a href="home.html">HOME</a></li>   
                     <li><a href="explore.html">EXPLORE</a></li>
                     <li><a href="caterogies.html">CATEGORIES</a></li>
                     <li><a href="#">COMBOS</a></li>
