--- a/caterogies.html
+++ b/caterogies.html
@@ -33,7 +33,17 @@
                 <img class="woodbgc" src="images\woodbgc.png">
                 <img class="img1" src="images\exp1.png">
                 <div class="text">Bestseller In Romance</div>
-                <img class="img2" src="all-images\Catalog\The Spanish Love Deception.jpg">
+                <div class="container1">
+                        <img class="img2" src="all-images\Catalog\The Spanish Love Deception.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\The Love Hypothesis.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\Love On The Brain.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\November 9.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\Mean To Be.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\The Seeven Husbands of Evelyn Hugo.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\My Fault.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\The Summer I Turned Pretty.jpg" alt="">
+                        <img class="img2" src="all-images\Catalog\Book Lovers.jpg" alt="">    
+                </div>
                 <img class="slb" src="images\slab.png">
                 <img class="slb2" src="images\slab.png">
                 <img class="slb3" src="images\slab.png">
