--- a/home.html
+++ b/home.html
@@ -23,6 +23,7 @@
                     <li><a href="caterogies.html">CATEGORIES</a></li>
                     <li><a href="#">COMBOS</a></li>
                     <li><a href="#">HELP</a></li>
+                    <li><a href="index.html">Login</a></li>
                 </ul>
             </nav>
             </div>
