footer in categories

--- a/caterogies.html
+++ b/caterogies.html
@@ -83,6 +83,59 @@
                 <img class="slb3" src="images\slab.png">
             </div>
         </div>
+        <div class="footer">  <!--footer -->
+            <div class="button-above-footer">
+                <button class="footer-button"  herf="#" id="scrollToTopButton">Back To The Top</button>
+            </div>
+            <div class="Fcontainer">
+                <div class="Fcont1">
+                    <h3>Get To Know Us</h3>
+                    <p>about us</p>
+                    <p>carrers</p>
+                    <p>Our Story</p>
+                    <p>FAQ's</p>
+                </div>
+                <div class="Fcont1">
+                    <h3>Connect With Us</h3>
+                    <p>Facebook</p>
+                    <p>Instagram</p>
+                    <p>Twitter</p>
+                    <p>Blog</p>
+                </div>
+                <div class="Fcont1">
+                    <h3>Contact Us</h3>
+                    <p>Mail: help@bookshelf.com</p>
+                    <p>Toll Free: 1800-23569875</p>
+                </div>
+                <div class="Fcont1">
+                    <h3>Policies</h3>
+                    <p>Terms Of Services</p>
+                    <p>Privacy Policy</p>
+                    <p>Shipping & Return</p>
+                    <p>Customer Service</p>
+                </div>
+            </div>
+            <div class="Fcontainer1">
+                <div class="Fcont1">
+                    <h3>Quick Links</h3>
+                    <p>Fiction</p>
+                    <p>Non-Fiction</p>
+                    <p>Combos</p>
+                    <p>Series</p>
+                    <p>Bestsellers</p>
+                </div>
+                <div class="Fcont2">
+                    <h2>Give Feedback?</h2>
+                    <a href="#" class="click-link">Click Here</a>
+                </div>
+                <div class="Fcont3">
+                    <h1>THE BOOKSHELF</h2>
+                </div>
+            </div>
+    
+        </div>
+        
+       </div>
     </div>
 </body>
 </html>
