--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">  
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css">  
+    <script src="index.js"></script>
 </head>
 <body>
    <div class="bgc">
@@ -21,9 +22,9 @@
                     <li><a href="home.html">HOME</a></li>   
                     <li><a href="explore.html">EXPLORE</a></li>
                     <li><a href="caterogies.html">CATEGORIES</a></li>
-                    <li><a href="#">COMBOS</a></li>
-                    <li><a href="#">HELP</a></li>
-                    <li><a href="index.html">Login</a></li>
+                    <!-- <li><a href="#">COMBOS</a></li> -->
+                    <li><a href="#" id="helpLink" >HELP</a></li>
+                    <li><a href="index.html">LOGIN</a></li>
                 </ul>
             </nav>
             </div>
@@ -128,7 +129,7 @@
     
     <div class="footer">  <!--footer -->
         <div class="button-above-footer">
-            <button class="footer-button" id="scrollToTopButton">Back To The Top</button>
+            <button class="footer-button"  herf="#" id="scrollToTopButton">Back To The Top</button>
         </div>
         <div class="Fcontainer">
             <div class="Fcont1">
@@ -179,6 +180,6 @@
     </div>
     
    </div>
-   <script src="index.js"></script>
+   
 </body>
 </html>
